# Ubuntu

./: CMakeLists.txt  enumclass.hpp  main.cpp
FEM/: CMakeLists.txt
FEM/headers/: CMakeLists.txt  DenseEigen.h  Node.h  ShapeFunction.h  Solid.h
FEM/headers/Elements/: CMakeLists.txt  Element.h  ShapeFunction.h
FEM/headers/Quadrature/: CMakeLists.txt  Quadrature.h
FEM/sources/: CMakeLists.txt  Node.cpp  ShapeFunction.cpp
FEM/sources/Elements/: CMakeLists.txt  Element.cpp  Truss.cpp
FEM/sources/Quadrature/: CMakeLists.txt  QuadLine.cpp  QuadTetrahedron.cpp  QuadTriangle.cpp  Quadrature.cpp
examples/: Example01.cpp  NumericalIntegration.cpp
mesh_interface/headers/: BoundaryCondition.h  CMakeLists.txt  Circle.h  Geometry.h  Line.h  LineLoop.h  Material.h  PlaneSurface.h  Point.h  Surface.h  SurfaceLoop.h  Volume.h
mesh_interface/sources/: BoundaryConditions.cpp  CMakeLists.txt  Circle.cpp  Geometry.cpp  Line.cpp  LineLoop.cpp  Material.cpp  PlaneSurface.cpp  Point.cpp  Surface.cpp  SurfaceLoop.cpp  Volume.cpp
